--- a/src/citra_qt/main.ui
+++ b/src/citra_qt/main.ui
@@ -61,6 +61,7 @@
     <addaction name="action_Load_Symbol_Map"/>
     <addaction name="separator"/>
     <addaction name="action_Select_Game_List_Root"/>
+    <addaction name="action_Refresh_Game_List"/>
     <addaction name="menu_recent_files"/>
     <addaction name="separator"/>
     <addaction name="action_Exit"/>
@@ -165,6 +166,14 @@
    </property>
    <property name="toolTip">
     <string>Selects a folder to display in the game list</string>
+   </property>
+  </action>
+  <action name="action_Refresh_Game_List">
+   <property name="text">
+    <string>Refresh Game List</string>
+   </property>
+   <property name="toolTip">
+    <string>Reloads the game list from disk</string>
    </property>
   </action>
  </widget>
